--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
   "expo": {
     "name": "ToDo",
-    "description": "This project is really great.",
+    "description": "My first fking todo app",
     "slug": "ToDo",
     "privacy": "public",
     "sdkVersion": "27.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./img/todoIcon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
