--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "expo": "^27.0.1",
     "firebase": "^5.0.1",
     "native-base": "^2.4.3",
+    "npm": "^6.1.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-elements": "^1.0.0-beta4",
